--- a/font.html
+++ b/font.html
@@ -6,86 +6,94 @@
     <title>Documents</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="figma.css"/>
+    <link rel="stylesheet" href="/html and css/css/figma.css"/>
     <link
-      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Mulish:wght@300;400;700;900&family=Nunito+Sans:opsz,wght@6..12,300;6..12,400;6..12,600;6..12,700;6..12,900&display=swap"
-      rel="stylesheet"/>
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Mulish:wght@300;400;700;900&family=Nunito+Sans:opsz,wght@6..12,300;6..12,400;6..12,600;6..12,700;6..12,900&display=swap" 
+      rel="stylesheet" />
   </head>
-
-  <body>
+ <body>
     <header>
-      <div>
-        <div>
-          <div id="logo"><span id="logo-font">i</span>Saqlain</div>
-          <ul class="header_ul">
-            <li><a href="#" class="header_link">my work</a></li>
-            <li><a href="#" class="header_link">get in touch</a></li>
-        </ul>
-        </div>
-      </div>
+      
     </header>
     <main>
-      <section class="container">
+      <section style="background-color: #EAECF9" ;>
         <div>
-          <div>
-            <h1>Hi, I'm Saqlain, Web & App Designer</h1>
-            <p>
-              I design and build beautiful websites and apps for businesses
-              around the globe. If you need a modern and powerful website, send
-              me an email. If we are a good fit, I will give you a time and cost
-              estimate.
-            </p>
-            <a class="primary-btn" href="#">see my work</a>
+          <div class="container">
+            <div id="logo"><span id="logo-font">i</span>Saqlain</div>
+              <ul class="header_ul">
+                <li><a href="#" class="header_link">my work</a></li>
+                <li><a href="#" class="header_link">get in touch</a></li>
+            </ul>
           </div>
         </div>
-      </section>
-      <section>
-        <div>
+        <div class="container">
           <div class="wrapper">
-            <div class="container">
-              <div>LATEST WORK</div>
-              <h2>Domain website</h2>
-              <ul>
-                <li>Website Design</li>
-                <li>Business</li>
-                <li>Concept</li>
-              </ul>
-              <a>see this project</a>
+            <div class="hero_col-left">
+              <h1><b>Hi, I'm Saqlain, Web & App Designer</b></h1>
+            <p class="p1">
+              I design and build beautiful websites and apps for businesses               around the globe. If you need a modern and powerful website, send               me an email. If we are a good fit, I will give you a time and cost  estimate.
+            </p>
+            <div class="btn-wrapper">
+              <a href="#" class="primary-btn">see my work</a>
             </div>
-            <div>
-              <img src="" alt="" />
             </div>
           </div>
         </div>
       </section>
       <section>
-        <div>
-          <div>
-            <div class="container">
-              <div>Luxery Clothing Brand</div>
-              <h2>Domain website</h2>
-              <ul>
-                <li>Website Design</li>
-                <li>Business</li>
-                <li>Concept</li>
+        <div class="container">
+          <div class="wrapper">
+            <div class="hero_col-left">
+              <div class="latest">LATEST WORK</div>
+              <h2><b>Domain website</b></h2>
+              <ul class="div__left-buttons">
+                <button>Website Design</button>
+                <button>Business</button>
+                <button>Concept</button>
               </ul>
-              <a>see this project</a>
+              <p class="p3">This is a homepage design for a concept project – a Domain Ragistrar Company. I have designed the page first.</p>
+              <div class="btn-wrapper">
+                <a href="#" class="primary-btn">see this project</a>
+              </div>
             </div>
             <div>
-              <img src="" alt="" />
+              <img src="/html and css/Photo/chat app.jpg" alt="" />
             </div>
           </div>
         </div>
       </section>
       <section>
-        <div>
-          <div>
+        <div class="container">
+          <div class="wrapper">
+            <div class="hero_col-left">
+              <h2>Luxery Clothing Brand</h2>
+              <ul class="div__left-buttons">
+                <button>Website Design</button>
+                <button>Luxery Clothing</button>
+                <button>Concept</button>
+              </ul>
+              <p class="p3">
+                A full website design and build for a concept team collaboration platform. This website also includes a beautiful blog. I have built the website and the blog in Webflow which has one of the best CMS for blog hosting.
+              </p>
+              <div class="btn-wrapper">
+                <a href="#" class="primary-btn">see this project</a>
+              </div>
+            </div>
+            <div>
+              <img class="img" src="/html and css/Photo/Team Mockup.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="wrapper_2">
             <div>
               <h2>What I do</h2>
             </div>
-            <div>
+            <div class="hero_col-left">
               <h3>Design</h3>
-              <p>
+              <p class="p2">
                 I design beautiful and powerful websites for modern businesses.
                 Any business today needs a website that wins customers’ trust
                 and helps you do your business well. I make sure your website is
@@ -97,13 +105,14 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div>
-        <div>
+    <footer style="background-color: #A8B4FF;">
+      <div class="margin_1">
+      <div class="container">
+        <div class="wrapper_2">
           <div>
             <h2>Want to work?</h2>
           </div>
-          <div>
+          <div class="hero_col-left">
             <p>
               If you need a modern and powerful website for your business,
               startup or personally, I am available for work. You can email me
@@ -112,6 +121,7 @@
           </div>
         </div>
       </div>
+    </div>
     </footer>
   </body>
 </html>
