--- a/font.html
+++ b/font.html
@@ -16,22 +16,36 @@
       
     </header>
     <main>
-      <section style="background-color: #EAECF9" ;>
-        <div>
+      <section class="content" style="background-color: #EAECF9; 
+      z-index: 1; position: relative">
+        <div class="content_2">
           <div class="container">
             <div id="logo"><span id="logo-font">i</span>Saqlain</div>
-              <ul class="header_ul">
-                <li><a href="#" class="header_link">my work</a></li>
-                <li><a href="#" class="header_link">get in touch</a></li>
+              <ul class="header_ul" >
+                <li><a href="#" class="header_link">
+                  <span id="shaded_text_2">my work</span></a></li>
+                <li><a href="#" class="header_link">
+                  <span id="shaded_text_2">get in touch</span></a>
+                  <div id="tr-one">
+                    <p style="font-size: 12px;">
+                      SCROLL
+                    </p>
+                    _________
+                  </div></li>
+                  
             </ul>
           </div>
         </div>
         <div class="container">
           <div class="wrapper">
             <div class="hero_col-left">
-              <h1><b>Hi, I'm Saqlain, Web & App Designer</b></h1>
+              <h1><b>Hi, <span id="shaded_text">I'm Saqlain</span>,<br>
+                <span id="shaded_text">Web & App</span> Designer <br></b></h1>
             <p class="p1">
-              I design and build beautiful websites and apps for businesses               around the globe. If you need a modern and powerful website, send               me an email. If we are a good fit, I will give you a time and cost  estimate.
+              I design and build beautiful websites and apps for 
+              <br>businesses  around the globe. If you need a modern and
+              <br> powerful website, send    me an email. If we are a good fit, I 
+              <br>will give you a time and cost estimate.
             </p>
             <div class="btn-wrapper">
               <a href="#" class="primary-btn">see my work</a>
@@ -51,13 +65,17 @@
                 <button>Business</button>
                 <button>Concept</button>
               </ul>
-              <p class="p3">This is a homepage design for a concept project – a Domain Ragistrar Company. I have designed the page first.</p>
+              <p class="p3">This is a homepage design for a concept project – a 
+                <br>Domain Ragistrar Company. I have designed the
+                <br> page first.</p>
               <div class="btn-wrapper">
                 <a href="#" class="primary-btn">see this project</a>
               </div>
             </div>
-            <div>
-              <img src="/html and css/Photo/chat app.jpg" alt="" />
+            <div class="img-container">
+              <img src="/html and css/Photo/chat app.jpg" width="523" />
+              <img src="/html and css/Photo/pattern.svg" id="pattern-left"/>
+              <img src="/html and css/Photo/arrow.svg" id="pattern-right"/>
             </div>
           </div>
         </div>
@@ -66,21 +84,26 @@
         <div class="container">
           <div class="wrapper">
             <div class="hero_col-left">
-              <h2>Luxery Clothing Brand</h2>
+              <h2>Luxery Clothing<br> Brand<br></h2>
               <ul class="div__left-buttons">
                 <button>Website Design</button>
                 <button>Luxery Clothing</button>
                 <button>Concept</button>
               </ul>
               <p class="p3">
-                A full website design and build for a concept team collaboration platform. This website also includes a beautiful blog. I have built the website and the blog in Webflow which has one of the best CMS for blog hosting.
+                A full website design and build for a concept team 
+                <br> collaboration platform. This website also includes a 
+                <br>beautiful blog. I have built the website and the blog in 
+                <br>Webflow which has one of the best CMS for blog
+                <br> hosting.
               </p>
               <div class="btn-wrapper">
                 <a href="#" class="primary-btn">see this project</a>
               </div>
             </div>
-            <div>
-              <img class="img" src="/html and css/Photo/Team Mockup.jpg" alt="" />
+            <div class="img-container">
+              <img src="/html and css/Photo/Team Mockup.jpg" width="523"/>
+              <img src="/html and css/Photo/pattern.svg" id="pattern-left"/>
             </div>
           </div>
         </div>
@@ -89,39 +112,47 @@
         <div class="container">
           <div class="wrapper_2">
             <div>
-              <h2>What I do</h2>
+              <h2>What <span id="shaded_text">I do</span></h2>
             </div>
             <div class="hero_col-left">
               <h3>Design</h3>
               <p class="p2">
-                I design beautiful and powerful websites for modern businesses.
-                Any business today needs a website that wins customers’ trust
-                and helps you do your business well. I make sure your website is
-                up to that standard.
+                I design beautiful and powerful websites for modern 
+                <br> businesses. Any business today needs a website that 
+                <br>wins customers’ trust and helps you do your business 
+                <br> well. I make sure your website is up to that standard.
               </p>
-              <a href="">work samples </a>
+              <a href="#"><b>work samples</b> </a>
+              <img src="/html and css/Photo/arrow.svg" style="margin: 0 0 0 10px;"/>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <footer style="background-color: #A8B4FF;">
-      <div class="margin_1">
+    <div class="content">
+      <footer style="background-color: #EAECF9; z-index: 1; 
+    position: relative; padding-top: 50px;">
+      <div>
       <div class="container">
         <div class="wrapper_2">
           <div>
-            <h2>Want to work?</h2>
+            <h2>Want to <span id="shaded_text">work?</span></h2>
+            <div id="footer">
+              © All right reserved – Saqlain Shaikh
+            </div>
           </div>
           <div class="hero_col-left">
             <p>
               If you need a modern and powerful website for your business,
-              startup or personally, I am available for work. You can email me
-              directly at <a href="">hello@isaqlain.com</a>.
+              <br>startup or personally, I am available for work. You can email me
+              <br>directly at 
+              <a href="#"><span id="shaded_text_2"><b>hello@isaqlain.com</b></span></a>.
             </p>
           </div>
         </div>
       </div>
     </div>
     </footer>
+  </div>
   </body>
 </html>
