--- a/font.html
+++ b/font.html
@@ -6,7 +6,7 @@
     <title>Documents</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="/html and css/css/figma.css"/>
+    <link rel="stylesheet" href="/html and css/figma/figma.css"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Mulish:wght@300;400;700;900&family=Nunito+Sans:opsz,wght@6..12,300;6..12,400;6..12,600;6..12,700;6..12,900&display=swap" 
       rel="stylesheet" />
@@ -73,9 +73,9 @@
               </div>
             </div>
             <div class="img-container">
-              <img src="/html and css/Photo/chat app.jpg" width="523" />
-              <img src="/html and css/Photo/pattern.svg" id="pattern-left"/>
-              <img src="/html and css/Photo/arrow.svg" id="pattern-right"/>
+              <img src="/html and css/figma/Photo/chat app.jpg" width="523" />
+              <img src="/html and css/figma/Photo/pattern.svg" id="pattern-left"/>
+              <img src="/html and css/figma/Photo/arrow.svg" id="pattern-right"/>
             </div>
           </div>
         </div>
@@ -84,6 +84,7 @@
         <div class="container">
           <div class="wrapper">
             <div class="hero_col-left">
+            <div class="latest">LATEST WORK</div>
               <h2>Luxery Clothing<br> Brand<br></h2>
               <ul class="div__left-buttons">
                 <button>Website Design</button>
@@ -102,8 +103,8 @@
               </div>
             </div>
             <div class="img-container">
-              <img src="/html and css/Photo/Team Mockup.jpg" width="523"/>
-              <img src="/html and css/Photo/pattern.svg" id="pattern-left"/>
+              <img src="/html and css/figma/Photo/Team Mockup.jpg" width="523"/>
+              <img src="/html and css/figma/Photo/pattern.svg" id="pattern-left" />
             </div>
           </div>
         </div>
@@ -115,15 +116,15 @@
               <h2>What <span id="shaded_text">I do</span></h2>
             </div>
             <div class="hero_col-left">
-              <h3>Design</h3>
+              <h3 id="design">Design</h3>
               <p class="p2">
                 I design beautiful and powerful websites for modern 
                 <br> businesses. Any business today needs a website that 
                 <br>wins customers’ trust and helps you do your business 
                 <br> well. I make sure your website is up to that standard.
               </p>
-              <a href="#"><b>work samples</b> </a>
-              <img src="/html and css/Photo/arrow.svg" style="margin: 0 0 0 10px;"/>
+              <a href="#" id="work"><b>work samples</b> </a>
+              <img src="/html and css/figma/Photo/arrow.svg" style="margin: 0 0 0 10px;"/>
             </div>
           </div>
         </div>
